<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cat_whisper">
        <EditTextPreference
            app:key="whisper_url"
            app:title="@string/whisper_url_title"
            app:summary="@string/whisper_url_summary"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="whisper_api_key"
            app:title="@string/whisper_key_title"
            app:summary="@string/whisper_key_summary"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="whisper_model"
            app:title="@string/whisper_model_title"
            app:defaultValue="whisper-1"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cat_translate">
        <EditTextPreference
            app:key="translate_url"
            app:title="@string/translate_url_title"
            app:summary="@string/translate_url_summary"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="translate_api_key"
            app:title="@string/translate_key_title"
            app:summary="@string/translate_key_summary"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="translate_source"
            app:title="@string/translate_source_title"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="translate_target"
            app:title="@string/translate_target_title"
            app:defaultValue="fr"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
